--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,13 @@
+version: '3.9'
 services:
-  api:
+  backend:
     build: ./backend
-    command: uvicorn api.main:app --host 0.0.0.0 --port 8000
-    env_file: .env
-    depends_on: [redis, db]
-
-  worker:
-    build: ./backend
-    command: celery -A tasks.celery worker --loglevel=info
-    env_file: .env
-    depends_on: [redis, db]
-
-  beat:
-    build: ./backend
-    command: celery -A tasks.celery beat --loglevel=info
-    env_file: .env
-    depends_on: [redis, db]
-
-  redis:
-    image: redis:7
-  db:
-    image: postgres:16
-    environment:
-      POSTGRES_DB: tender
-      POSTGRES_USER: tender
-      POSTGRES_PASSWORD: tender
-  nginx:
-    image: nginx:alpine
     volumes:
-      - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
-    ports: ["80:80"]
-    depends_on: [api, admin]
+      - ./config.json:/app/config.json   # редактируемый конфиг
+      - ./logs:/app/logs                # куда писать found_tenders.json и логи
+    ports: [ "8000:8000" ]
 
-  admin:        # статика Flutter
+  frontend:
     build: ./frontend
-    depends_on: []
+    ports: [ "8080:80" ]
+    depends_on: [ backend ]
