--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,11 +1,11 @@
-# build
-FROM cirrusci/flutter:3.29.0 AS build
+
+FROM --platform=linux/amd64 ghcr.io/cirruslabs/flutter:3.29.3 AS build
 WORKDIR /app
-COPY frontend/ .
+COPY admin/ .
 RUN flutter pub get
 RUN flutter build web --release
 
-# serve
+# ---------- runtime stage ----------
 FROM nginx:alpine
 COPY --from=build /app/build/web /usr/share/nginx/html
 EXPOSE 80
