--- a/config.json
+++ b/config.json
@@ -6,16 +6,16 @@
   "KEYWORDS_GEO": [
     "თუჯის სარქველი",
     "ფლიანეცებს შორის მბრუნავი სარქველი",
-    "დანისებრი სარქველი",
     "ორმაგი ექსცენტრიული მბრუნავი სარქველი",
     "მილტუჩა ჩამკეტი რეზინის სარქველით",
     "მილტუჩა ჩამკეტი მეტალის სარქველით",
     "ჰიდრანტი მიწისქვეშა ორმაგი საკეტი",
-    "хаип"
+    "დანისებრი სარქველი"
   ],
   "output": "found_tenders.json",
-  "max_pages": 1,
+  "max_pages": 3,
   "headless": true,
-  "reset_cache": true,
-  "log": "INFO"
+  "reset_cache": false,
+  "log": "INFO",
+  "EXCLUDED_FIRM": "ინგი-77"
 }
