--- a/config.json
+++ b/config.json
@@ -4,13 +4,9 @@
   "FUZZY_THRESHOLD": 85,
   "USE_STANZA_LEMMAS": true,
   "KEYWORDS_GEO": [
-    "თუჯის სარქველი",
-    "ფლიანეცებს შორის მბრუნავი სარქველი",
-    "ორმაგი ექსცენტრიული მბრუნავი სარქველი",
-    "მილტუჩა ჩამკეტი რეზინის სარქველით",
-    "მილტუჩა ჩამკეტი მეტალის სარქველით",
-    "ჰიდრანტი მიწისქვეშა ორმაგი საკეტი",
-    "დანისებრი სარქველი"
+    "შემთხვევაში პროექტში",
+    "შემთხვევაში უზრუნველყოფს",
+    "გურჯაანი"
   ],
   "output": "found_tenders.json",
   "max_pages": 3,
