--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,9 +1,10 @@
+ARG APP_PASSWORD
 
 FROM --platform=linux/amd64 ghcr.io/cirruslabs/flutter:3.29.3 AS build
 WORKDIR /app
 COPY admin/ .
 RUN flutter pub get
-RUN flutter build web --release
+RUN flutter build web --release --dart-define=PASSWORD_ADMIN=$APP_PASSWORD
 
 # ---------- runtime stage ----------
 FROM nginx:alpine
