Изменить ветку клонирования парсера на tested_branch в Dockerfile

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -33,7 +33,7 @@ COPY backend/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 # 3. клонируем сам парсер и ставим его requirements
-RUN git clone --branch  refactor_arg \
+RUN git clone --branch  tested_branch \
     https://github.com/goodven152/parser_GETenders.git /opt/parser \
     && pip install --no-cache-dir -r /opt/parser/requirements.txt
 
