--- a/config.json
+++ b/config.json
@@ -1,12 +1,13 @@
 {
   "START_URL": "https://tenders.procurement.gov.ge/public/?lang=ge",
   "PAGE_ROWS": 4,
-  "FUZZY_THRESHOLD": 80,
+  "FUZZY_THRESHOLD": 90,
   "USE_STANZA_LEMMAS": true,
   "KEYWORDS_GEO": [
-    "შემთხვევაში პროექტში",
-    "შემთხვევაში უზრუნველყოფს",
-    "გურჯაანი"
+    "სოლისებრი",
+    "ურდული",
+    "საფეხურიანი",
+    "რომელიც"
   ],
   "output": "found_tenders.json",
   "max_pages": 3,
