--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     volumes:
       - ./config.json:/app/config.json
       - ./logs:/app/logs
+      - ./data:/app
     ports: ["8000:8000"]
 
     # ───────────────────────────────────────────────
