Enhance Dockerfile to include parser-requirements.txt for improved dependency management and cleanup process.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -13,7 +13,7 @@ RUN apt-get update && \
     && rm -rf /var/lib/apt/lists/*
 
 # 2. backend requirements → wheels
-COPY backend/requirements.txt backend-requirements.txt
+COPY backend/requirements.txt backend-requirements.txt  
 RUN pip wheel -r backend-requirements.txt --wheel-dir /wheels
 
 # 3. clone parser and build its wheels
@@ -45,10 +45,11 @@ RUN apt-get update && \
 # 1. устанавливаем все wheels (backend + parser)
 COPY --from=build /wheels /tmp/wheels
 COPY --from=build /build/backend-requirements.txt /tmp/backend-requirements.txt
+COPY --from=build /opt/parser/requirements.txt /tmp/parser-requirements.txt
 RUN pip install --no-index --find-links=/tmp/wheels \
         -r /tmp/backend-requirements.txt \
-        -r /opt/parser/requirements.txt && \
-    rm -rf /tmp/wheels /tmp/backend-requirements.txt
+        -r /tmp/parser-requirements.txt && \
+    rm -rf /tmp/wheels /tmp/backend-requirements.txt /tmp/parser-requirements.txt
 
 # 2. копируем исходники backend-API
 COPY backend /app
@@ -61,9 +62,6 @@ RUN python - <<'PY'
 import stanza, os
 stanza.download('ka', processors='tokenize,mwt,pos,lemma')
 PY
-
-# HEALTHCHECK (опционально, если в main.py есть /healthz)
-HEALTHCHECK CMD curl -f http://localhost:8000/healthz || exit 1
 
 # --------- ENTRYPOINT ------------------------------------------------------
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000", "--workers", "1"]
